# portfolio-thesis-plane

./: .gitignore  AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  conftest.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
data/ledger/: 2026-W25.jsonl
decisions/: DEC-PTP-001-rubric-closure.md
docs/: METHODOLOGY.md  first-pr.md
portfolio_thesis_plane/: __init__.py  __main__.py  cli.py  ledger.py  loader.py  renderer.py  report.py  score.py  scorer.py
registry/: repos.yaml
reports/2026-W25/: _rollup.md  agent-notary-layer.md  athena-site.md  binding-constraint.md  brief-calibration.md  dream-replay-cli.md  eval-forge.md  hbm-supply-tracker.md  interconnect-queue-risk.md  mcp-security-lab.md  modelswap-replay.md  oulipo-memory-deck.md  pattern-index.md  portfolio-repo-04.md  portfolio-repo-05.md  portfolio-repo-06.md  portfolio-repo-07.md  portfolio-repo-08.md  portfolio-repo-09.md  portfolio-repo-10.md  portfolio-repo-11.md  portfolio-repo-12.md  portfolio-repo-13.md  portfolio-repo-14.md  portfolio-repo-15.md  portfolio-repo-16.md  portfolio-repo-17.md  portfolio-repo-18.md  portfolio-repo-19.md  portfolio-repo-20.md  portfolio-thesis-plane.md  (+7 more)
rubric/: thesis-alive.yaml
schemas/: card.schema.json  repo-entry.schema.json  rollup.schema.json  score.schema.json
scripts/: validate_registry.py  validate_rubric.py  validate_schemas.py
signals/: 2026-W25.yaml
tests/: test_cli_errors.py  test_ledger.py  test_renderer.py  test_rollup.py  test_scorer.py  test_show.py  test_smoke.py  test_validators.py
(+12 files in other folders)
